--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@ src="https://www.facebook.com/tr?id=1650483442324379&ev=PageView&noscript=1"
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Favicon inlined as SVG data URI (shows a green circle with 'M') -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20100%20100'%3E%3Ccircle%20cx='50'%20cy='50'%20r='48'%20fill='%2328a745'/%3E%3Ctext%20x='50'%20y='58'%20font-size='50'%20text-anchor='middle'%20font-family='Arial'%20fill='white'%3EM%3C/text%3E%3C/svg%3E">
+    <!-- Fallback for older browsers/users who prefer PNG (optional) -->
+    <link rel="alternate icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAPCAYAAAA71pVKAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH5AYUDxQv0n6VZQAAAB1pVFh0Q29tbWVudAAAAAAAvK6ymQAAAE5JREFUKM9jZKAxYKSx+QwMDIwMDAw0j8GBgYGBgYGBgYGJgYGRgYGBgYGBkYGBgYGJgYGRgYGBgYGBgYGBgYGLgB4T4C17n9cbwAAAABJRU5ErkJggg==">
     <title>Quiz Mounjaro de Pobre</title>
     <style>
         * {
