--- a/index.html
+++ b/index.html
@@ -31,16 +31,13 @@ src="https://www.facebook.com/tr?id=1650483442324379&ev=PageView&noscript=1"
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicons para máxima compatibilidade -->
+    <!-- Favicons PNG para máxima compatibilidade -->
     <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="favicons/favicon-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="favicons/favicon-512x512.png">
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/favicon-180x180.png">
-    <!-- Fallback para navegadores antigos -->
-    <link rel="shortcut icon" href="favicons/favicon-32x32.png">
-    <!-- Manifest para PWA (opcional) -->
-    <!-- <link rel="manifest" href="favicons/site.webmanifest"> -->
+    <link rel="shortcut icon" type="image/png" href="favicons/favicon-32x32.png">
     <title>Quiz Mounjaro de Pobre</title>
     <style>
         * {
