--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ src="https://www.facebook.com/tr?id=1650483442324379&ev=PageView&noscript=1"
     <link rel="icon" type="image/png" sizes="192x192" href="favicons/favicon-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="favicons/favicon-512x512.png">
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/favicon-180x180.png">
-    <link rel="shortcut icon" href="favicons/favicon-32x32.png">
+    <link rel="shortcut icon" type="image/png" href="favicons/favicon-32x32.png">
     <title>Quiz Mounjaro de Pobre</title>
     <style>
         * {
