--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicons PNG para máxima compatibilidade -->
-    <!-- Favicons PNG para máxima compatibilidade -->
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="favicons/favicon-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="favicons/favicon-512x512.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicons/favicon-180x180.png">
-    <link rel="shortcut icon" href="favicons/favicon-32x32.png">
+    <!-- Favicons: include a root /favicon.ico for maximum compatibility -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="apple-touch-icon" href="/favicons/favicon-180x180.png" sizes="180x180">
+    <meta name="msapplication-TileImage" content="/favicons/favicon-192x192.png">
+    <!-- Fallback shortcut icon -->
+    <link rel="shortcut icon" href="/favicon.ico">
     <title>Quiz Mounjaro de Pobre</title>
     <style>
         * {
