--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicons: include a root /favicon.ico for maximum compatibility -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel="apple-touch-icon" href="/favicons/favicon-180x180.png" sizes="180x180">
-    <meta name="msapplication-TileImage" content="/favicons/favicon-192x192.png">
-    <!-- Fallback shortcut icon -->
-    <link rel="shortcut icon" href="/favicon.ico">
+    <!-- Favicons served from assets/icons/ -->
+    <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/icons/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="assets/icons/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png" sizes="180x180">
+    <meta name="msapplication-TileImage" content="assets/icons/favicon-48x48.png">
+    <link rel="shortcut icon" href="assets/icons/favicon.ico">
+    <meta name="theme-color" content="#ffffff">
     <title>Quiz Mounjaro de Pobre</title>
     <style>
         * {
