--- a/index.html
+++ b/index.html
@@ -1842,30 +1842,36 @@
                         <span class="offer-check">✅</span>
                         <div>
                             <strong>Mounjaro de Pobre Completo</strong><br>
-                            <small>e Passo a Passo de como usar.</small>
+                            <small> Passo a Passo de como usar.</small>
                         </div>
                     </div>
 
                     <div class="offer-item">
                         <span class="offer-check">✅</span>
                         <div>
-                            <strong>Detox Exclusivo de 7 Dias</strong>
+                            <strong>🌿 Ingredientes 100% naturais</strong>
+                            <br>
+                            <strong>💸 Custo abaixo de R$30</strong>
+                            <br>
+                            <strong>⏱️ Resultados visíveis em 7 dias</strong>
+                            <br>
+                            <strong>🙅‍♀️ Sem remédios ou academia</strong>
                         </div>
                     </div>
 
                     <div class="offer-item">
                         <span class="offer-check">✅</span>
                         <div>
-                            <strong>Suporte Exclusivo</strong><br>
-                            <small>durante o processo do Mounjaro.</small>
+                            <strong>💚 Garantia de satisfação ou seu dinheiro de volta</strong><br>
+                            <small> suporte exclusivo durante o processo</small>
                         </div>
                     </div>
 
                     <div class="offer-item">
                         <span class="offer-check">✅</span>
                         <div>
-                            <strong>Pagamento Único</strong><br>
-                            <small>sem mensalidades!</small>
+                            <strong>🔒 Acesso vitalício — compre uma vez e use pra sempre</strong><br>
+                            <small> Entrega imediata no seu e-mail após o pagamento</small>
                         </div>
                     </div>
                 </div>
@@ -1876,16 +1882,16 @@
                 </div>
 
                 <div class="price-section">
-                    <div class="original-price">Valor Total: R$ 197</div>
+                    <div class="original-price">De: R$ 67,90</div>
                     <div style="font-size: 20px; font-weight: bold; margin: 10px 0;">🤯 Por Apenas:</div>
                     <div class="current-price">R$ 26,90<span style="font-size: 24px;"></span></div>
                     <div class="price-note">
-                        O Segredo para Desinchar, Perder Medidas e Se Sentir Mais Linda em Poucos Dias!
+                        Emagreça naturalmente sem gastar caro — o método secreto que já transformou mais de 1.200 mulheres!
                     </div>
                 </div>
 
                 <button class="cta-button" style="font-size: 18px; padding: 20px 40px; margin: 20px 0;" onclick="window.open('https://pay.cakto.com.br/xwyiv37_629372', '_blank')">
-                    Quero Começar Hoje! 😍
+                    Quero Começar Agora! 😍
                 </button>
 
                 <div style="display: flex; justify-content: center; gap: 20px; margin: 20px 0; font-size: 12px; color: #666;">
@@ -1962,7 +1968,7 @@
                 </div>
 
                 <button class="cta-button" style="font-size: 18px; padding: 20px 40px; margin: 20px 0;" onclick="window.open('https://pay.cakto.com.br/xwyiv37_629372', '_blank')">
-                    Quero Começar Hoje! 😍
+                    Quero Começar Agora! 😍
                 </button>
 
                 <div style="display: flex; justify-content: center; gap: 20px; margin: 20px 0; font-size: 12px; color: #666;">
