--- a/index.html
+++ b/index.html
@@ -1841,21 +1841,22 @@
                     <div class="offer-item">
                         <span class="offer-check">✅</span>
                         <div>
-                            <strong>Mounjaro de Pobre Completo</strong><br>
-                            <small> Passo a Passo de como usar.</small>
+                            <strong>💚 Mounjaro de Pobre Completo</strong><br>
+                            <small>🌿  Ingredientes 100% naturais</small>
+                            <br>
+                            <small>💸  Custo abaixo de R$30</small>
+                            <br>
+                            <small>⏱️  Resultados visíveis em 7 dias</small>
+                            <br>
+                            <small>🙅‍♀️  Sem remédios ou academia</small>
                         </div>
                     </div>
 
                     <div class="offer-item">
                         <span class="offer-check">✅</span>
                         <div>
-                            <strong>🌿 Ingredientes 100% naturais</strong>
-                            <br>
-                            <strong>💸 Custo abaixo de R$30</strong>
-                            <br>
-                            <strong>⏱️ Resultados visíveis em 7 dias</strong>
-                            <br>
-                            <strong>🙅‍♀️ Sem remédios ou academia</strong>
+                            <strong>📦 Entrega 100% digital e segura</strong><br>
+                            <small> Mais de 1.200 mulheres já transformaram seu corpo com este método</small>
                         </div>
                     </div>
 
